--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ license = {file = "LICENSE"}
 dependencies = []
 
 [project.scripts]
-my_script = "my_module.my_script:main"  # Makes it runnable with "my_script" in CLI
+md2html = "my_module.md2html:main" 
